aggiunte di inizio layout a welcome

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -3,3 +3,8 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import 'partials/_jumbo.scss';
+@import 'partials/_content.scss';
+@import 'partials/_footer.scss';
+
+
