layout plate.index

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -7,4 +7,14 @@
 @import 'partials/_content.scss';
 @import 'partials/_footer.scss';
 
+body{
+    font-family: 'Montserrat', sans-serif;
+}
+
+h1, h2, h3{
+    font-family: 'Solway', serif;;
+}
+
+
+
 
