added layout restaurant-show for guests

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -33017,6 +33017,10 @@ h1, h2, h3 {
   font-family: "Solway", serif;
 }
 
+.norican {
+  font-family: "Norican", serif;
+}
+
 @media (min-width: 640px) {
   .sm\:container {
     width: 100%;
