--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -12,7 +12,11 @@ body{
 }
 
 h1, h2, h3{
-    font-family: 'Solway', serif;;
+    font-family: 'Solway', serif;
+}
+
+.norican{
+    font-family: 'Norican', serif;
 }
 
 
